--- a/index.html
+++ b/index.html
@@ -6,5 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Network Page</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="profilepic"></div>
+      <div class="sitename">
+        <h1>Site Name</h1>
+        <h2>My Name</h2>
+      </div>
+      <div class="navmenu">
+        <ul>
+          <li>Timeline</li>
+          <li>About</li>
+          <li>Welcome</li>
+        </ul>
+      </div>
+      <div class="button"></div>
+    </div>
+    <div class="column">
+      <div class="column left" style="background-color: aliceblue">
+        Left Column
+      </div>
+      <div class="column right" style="background-color: blue">
+        Right Column
+      </div>
+    </div>
+  </body>
 </html>
