--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         <h2>My Name</h2>
       </div>
       <div class="navmenu">
-        <ul>
-          <li>Timeline</li>
-          <li>About</li>
-          <li>Welcome</li>
-        </ul>
+        <a class="menu" href="#home"> Home</a>
+        <a href="#timeline">Timeline</a>
+        <a href="#welcome">Welcome</a>
       </div>
-      <div class="button"></div>
+      <div class="button">
+        <button type="button">Click Me</button>
+        <button type="button">Yes Click Me</button>
+        <button type="button">I said Click Me!</button>
+      </div>
     </div>
     <div class="column">
       <div class="column left" style="background-color: aliceblue">
