Final Social Media Project Changes

--- a/index.html
+++ b/index.html
@@ -8,28 +8,108 @@
   </head>
   <body>
     <div class="header">
-      <div class="profilepic"></div>
+      <div class="profilepic">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Felix_tgtltge_04.jpg"
+          width="150"
+          height="150"
+        />
+      </div>
       <div class="sitename">
-        <h1>Site Name</h1>
-        <h2>My Name</h2>
+        <h1>Cat Profiles</h1>
+        <h3>Karma</h3>
       </div>
       <div class="navmenu">
-        <a class="menu" href="#home"> Home</a>
-        <a href="#timeline">Timeline</a>
+        <a href="#home">Home</a>
+        <a href="#timeline">Catline</a>
         <a href="#welcome">Welcome</a>
+        <a href="#aboutme">Cats</a>
       </div>
-      <div class="button">
-        <button type="button">Click Me</button>
-        <button type="button">Yes Click Me</button>
-        <button type="button">I said Click Me!</button>
+      <div class="likebuttons">
+        <button type="button">Catnip</button>
+        <button type="button">Pet Me</button>
+        <button type="button">Food</button>
       </div>
-    </div>
-    <div class="column">
-      <div class="column left" style="background-color: aliceblue">
-        Left Column
-      </div>
-      <div class="column right" style="background-color: blue">
-        Right Column
+      <div class="row">
+        <div class="column left" style="background-color: ivory">
+          <h2>Cat Complaints</h2>
+          <div class="box leftside">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Cute_Cat_Wearing_A_Tie.jpg"
+              width="150"
+              height="150"
+              style="border: 5px solid black"
+            />
+            <p>
+              Let me in let me out let me in let me out let me in let me out who
+              broke this door anyway reward the chosen human with a slow blink
+              Pooping rainbow while flying in a toasted bread costume in space
+              hide from vacuum cleaner funny little cat chirrup noise shaking
+              upright tail when standing next to you cough furball into food
+              bowl then scratch owner for a new one Cat ipsum dolor sit amet,
+              mew. Sleep on dog bed, force dog to sleep on floor scratch the
+              furniture but show belly but my cat stared at me he was sipping
+              his tea, too sleep on keyboard, for brown cats with pink ears yet
+              make muffins. Catto munch salmono catching very fast laser pointer
+              brown cats with pink ears. My slave human didn't give me any food
+              so i pooped on the floor dismember a mouse and then regurgitate
+              parts of it on the family room floor burrow under covers, and sit
+            </p>
+            <div class="copyright">
+              <p>Copyright Karma The Cat &copy; 2020</p>
+            </div>
+          </div>
+        </div>
+        <div class="column right" style="background-color: ivory">
+          <h2>Cat Breeds</h2>
+          <div class="box rightside">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Tabby_cat_with_blue_eyes-3336579.jpg"
+              width="150"
+              height="150"
+              style="border: 5px solid black"
+            />
+            <p>
+              Tabby Bengal jaguar turkish angora donskoy Cat ipsum dolor sit
+              amet, birman. Singapura burmese and abyssinian , for mouser tom.
+              Siberian scottish fold. Bombay. Turkish angora persian or egyptian
+              mau sphynx lion panther. Malkin jaguar and munchkin or balinese .
+              Scottish fold burmese leopard so savannah abyssinian so siberian
+              puma. Leopard panther so maine coon.
+            </p>
+            <p>
+              Maine coon Siberian sphynx grimalkin Cat ipsum dolor sit amet,
+              abyssinian . American bobtail ocelot american bobtail ocelot
+              norwegian forest or tiger.
+            </p>
+            <h2>Cat Complaints</h2>
+            <input
+              type="checkbox"
+              id="complaint1"
+              name="vehicle1"
+              value="nofood"
+            />
+            <label for="complaint1"> Come on feed me!</label><br />
+            <input
+              type="checkbox"
+              id="complaint1"
+              name="complaint1"
+              value="food"
+            />
+            <label for="compliant2">Rub my belly!</label><br />
+            <input
+              type="checkbox"
+              id="complaint2"
+              name="complaint2"
+              value="Love"
+            />
+            <label for="complaint3">Leave me alone!</label><br /><br />
+            <input type="submit" value="Submit" />
+            <div class="coffee">
+              <p>Coffee Made It Happen!</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
