last minute changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="row">
         <div class="column left" style="background-color: ivory">
-          <h2>Cat Complaints</h2>
+          <h2>Cat Profile</h2>
           <div class="box leftside">
             <img
               src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Cute_Cat_Wearing_A_Tie.jpg"
@@ -50,10 +50,7 @@
               mew. Sleep on dog bed, force dog to sleep on floor scratch the
               furniture but show belly but my cat stared at me he was sipping
               his tea, too sleep on keyboard, for brown cats with pink ears yet
-              make muffins. Catto munch salmono catching very fast laser pointer
-              brown cats with pink ears. My slave human didn't give me any food
-              so i pooped on the floor dismember a mouse and then regurgitate
-              parts of it on the family room floor burrow under covers, and sit
+              make muffins.
             </p>
             <div class="copyright">
               <p>Copyright Karma The Cat &copy; 2020</p>
